adding logic to home page

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,1 +1,9 @@
-<h1>{{home.welcome}}</h1>
+<h1>Welcome to Grocery Cloud</h1>
+<h3>Home to the best groceries, it dosen't get any better than this</h3>
+<a href="/shop">SHOP ALL</a>
+<span><input type="checkbox" name="toggle-carousel" id="toggle-carousel">Toggle slide show</span>
+
+<carousel-directive></carousel-directive>
+
+<i class="fas fa-angle-left" id="back"></i>
+<i class="fas fa-angle-right" id="next"></i>
