minor adjustment to home page

--- a/public/app/views/directiveViews/carousel.html
+++ b/public/app/views/directiveViews/carousel.html
@@ -12,3 +12,6 @@
         <a href="#"><img src="{{home.products[3]['imageLink']}}" width="300px" height="300px"></a>
     </figure>
 </div>
+
+<i class="fas fa-angle-left" id="back"></i>
+<i class="fas fa-angle-right" id="next"></i>
