adding logic to shopping page

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,6 +1,6 @@
 <h1>Welcome to Grocery Cloud</h1>
-<h3>Home to the best groceries, it dosen't get any better than this</h3>
-<a href="/shop">SHOP ALL</a>
+<h3>Home to the best groceries. It dosen't get any better than this</h3>
+<a href="/shopping">SHOP ALL</a>
 <span><input type="checkbox" name="toggle-carousel" id="toggle-carousel">Toggle slide show</span>
 
 <carousel-directive></carousel-directive>
