adding logic to product page

--- a/public/app/views/directiveViews/carousel.html
+++ b/public/app/views/directiveViews/carousel.html
@@ -1,15 +1,27 @@
 <div id="carousel">
     <figure class="vissible">
-        <a href="#"><img src="{{home.products[0]['imageLink']}}" width="300px" height="300px"></a>
+        <a href="#"  ng-click="redirect(home.products[0]['name'])">
+            <!-- <img src="{{home.products[0]['imageLink']}}" width="300px" height="300px"> -->
+            <p>{{home.products[0]['imageLink']}}</p>
+        </a>
     </figure>
     <figure>
-        <a href="#"><img src="{{home.products[1]['imageLink']}}" width="300px" height="300px"></a>
+        <a href="#"  ng-click="redirect(home.products[1]['name'])">
+            <!-- <img src="{{home.products[1]['imageLink']}}" width="300px" height="300px"> -->
+            <p>{{home.products[1]['imageLink']}}</p>
+        </a>
     </figure>
     <figure>
-        <a href="#"><img src="{{home.products[2]['imageLink']}}" width="300px" height="300px"></a>
+        <a href="#"  ng-click="redirect(home.products[2]['name'])">
+            <!-- <img src="{{home.products[2]['imageLink']}}" width="300px" height="300px"> -->
+            <p>{{home.products[2]['imageLink']}}</p>
+        </a>
     </figure>
     <figure>
-        <a href="#"><img src="{{home.products[3]['imageLink']}}" width="300px" height="300px"></a>
+        <a href="#"  ng-click="redirect(home.products[3]['name'])">
+            <!-- <img src="{{home.products[3]['imageLink']}}" width="300px" height="300px"> -->
+            <p>{{home.products[3]['imageLink']}}</p>
+        </a>
     </figure>
 </div>
 
