adding logic to cart page

--- a/public/app/views/directiveViews/carousel.html
+++ b/public/app/views/directiveViews/carousel.html
@@ -1,3 +1,5 @@
+<span><input type="checkbox" name="toggle-carousel" id="toggle-carousel">Toggle slide show</span>
+
 <div id="carousel">
     <figure class="vissible">
         <a href="#"  ng-click="redirect(home.products[0]['name'])">
