--- a/public/app/views/cart.html
+++ b/public/app/views/cart.html
@@ -1,1 +1,42 @@
-<h1>{{cart.welcome}}</h1>
+<h2>Shopping Cart</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th></th>
+            <th>unit price</th>
+            <th>qty</th>
+            <th>cost</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="product in cart.cart">
+            <td>
+                <!-- <img src="{{product['image']}}" width="100px" height="100px"> -->
+                <p>{{product['image']}}</p>
+            </td>
+            <td>{{product['name']}}</td>
+            <td>&#8358;{{product['unitPrice']}}</td>
+            <td><input type="number" ng-init="qty=product['qty']" id="qty" ng-model="qty" ng-change="cart.updateQty($index, qty, product)" min="1"></td>
+            <td>&#8358;{{(product.unitPrice * qty).toFixed(2)}}</td>
+            <td><button ng-click="cart.removeFromCart(product)">x</button></td>
+        </tr>
+    </tbody>
+</table>
+
+<p>Shipping Details</p>
+<form name="form" ng-submit="cart.checkout()">
+    <input type="text" required="required" placeholder="Name" ng-model="cart.details.name"><br/>
+    <input type="text"  required="required" placeholder="Address" ng-model="cart.details.address"><br/>
+    <input type="text"  required="required" placeholder="City" ng-model="cart.details.city"><br/>
+    <input type="text"  required="required" placeholder="Phone Number" ng-model="cart.details.phone"><br/>
+    <p>Subtotal: &#8358;{{cart.subtotal}}</p>
+    <p>Shipping: &#8358;{{cart.shipping}}</p>
+    <p>Tax(10%): &#8358;{{cart.tax}}</p>
+    <p>Total: &#8358;{{cart.total}}</p>
+    <input type="submit" value="Checkout">
+</form>
+
+<!-- ng-click="cart.checkout()" -->
