--- a/public/app/views/product.html
+++ b/public/app/views/product.html
@@ -3,10 +3,10 @@
 <p>{{product.product['imagelink']}}</p>
 <p>Rating: {{product.product['rating']}}</p>
 <p>Stock: {{product.product['stock']}}</p>
-<p>${{product.product['price']}}</p>
+<p>&#8358;{{(product.product['price']).toFixed(2)}}</p>
 <p>{{product.product['description']}}</p>
 <div>
     <label>Qty</label>
-    <input type="number" id="qty" value="1">
+    <input type="number" ng-init="qty=1" id="qty" ng-model="qty" ng-change="product.updateQty(qty)" min="1">
 </div>
-<button>Add</button>
+<button ng-click="product.addToCart()">Add</button>
