--- a/public/app/views/cart.html
+++ b/public/app/views/cart.html
@@ -1,10 +1,10 @@
 <h2>Shopping Cart</h2>
 
-<table>
+<table ng-if="cart.cart.length != 0">
     <thead>
         <tr>
-            <th></th>
-            <th></th>
+            <th>image</th>
+            <th>name</th>
             <th>unit price</th>
             <th>qty</th>
             <th>cost</th>
@@ -25,8 +25,9 @@
         </tr>
     </tbody>
 </table>
+<div ng-if="cart.cart.length == 0">Shopping cart is empty</div>
 
-<p>Shipping Details</p>
+<p>Enter Shipping Details</p>
 <form name="form" ng-submit="cart.checkout()">
     <input type="text" required="required" placeholder="Name" ng-model="cart.details.name"><br/>
     <input type="text"  required="required" placeholder="Address" ng-model="cart.details.address"><br/>
