--- a/public/app/styles/scss/modules/nav.scss
+++ b/public/app/styles/scss/modules/nav.scss
@@ -40,7 +40,7 @@
         }
         a:not(#home) {
             border-bottom: 1px solid $mobile-nav-border;
-            &:hover {
+            &:hover:not(.active) {
                 color: #fff;
                 background-color: $main-blue;
                 transition: background-color 0.2s;
@@ -51,12 +51,13 @@
             padding: 20px;
             border-bottom: 1px solid $main-blue;
         }
+        a.active:not(#home) {
+            color: #fff;
+            background-color: darken($color: $main-blue, $amount: 25);
+        }
         li {
             #cart-container {
-                position: relative;
                 #cart-qty {
-                    position: absolute;
-                    top: 14%;
                     right: 46%;
                 }
             }
@@ -87,7 +88,9 @@
             right: 14%;
             font-size: 0.7em;
             color: #fff;
-            width: 15px;
+            width: 17px;
+            height: 17px;
+            line-height: 18px;
             background-color: $cart-red;
             border-radius: 50%;
             text-align: center;
