--- a/public/app/styles/scss/base/variables.scss
+++ b/public/app/styles/scss/base/variables.scss
@@ -1,5 +1,5 @@
 $main-blue: #2980b9;
-$main-orange: #f39c12;
+$main-orange: #f7b731;
 $text-color: #545454;
 $link-color: #1a0dab;
 $link-visited-color: #609;
@@ -7,3 +7,4 @@ $cart-red: #eb2f06;
 $footer-gray: #495057;
 $footer-border: #e6e6e6;
 $mobile-nav-border: #e7e7e7;
+$green: #1abc9c;
