--- a/public/app/views/directiveViews/nav.html
+++ b/public/app/views/directiveViews/nav.html
@@ -5,9 +5,12 @@
                 <i class="fas fa-bars"></i>
             </div>
             <li class="left">
-                <a href="/" id="home">Grocery Cloud</a>
+                <a href="/" id="home" class="home">Grocery Cloud</a>
             </li>
             <div class="right mobile-menu nav-hide">
+                <li class="phone">
+                    <a href="/" class="home">Home</a>
+                </li>
                 <li class="left">
                     <a href="/shopping" id="shopping">Shop All</a>
                 </li>
