--- a/public/app/styles/css/style.css
+++ b/public/app/styles/css/style.css
@@ -367,6 +367,9 @@ textarea {
   font: inherit;
   /* 2 */ }
 
+/* 768px / 16px = 48em */
+/* Extra Small Only */
+/* Small Devices, Tablets */
 .right {
   float: right; }
 
@@ -378,17 +381,39 @@ textarea {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  max-width: 1170px; }
+  width: 100%; }
+
+@media only screen and (max-width: 47.9375em) {
+  section {
+    padding: 10px 0; } }
+
+@media only screen and (min-width: 48em) {
+  .container {
+    width: 750px; }
+  section {
+    padding: 30px 20px; } }
+
+@media only screen and (min-width: 62em) {
+  .container {
+    width: 970px; } }
+
+@media only screen and (min-width: 75em) {
+  .container {
+    width: 1170px; } }
 
 .phone {
   display: none; }
 
+@media only screen and (max-width: 47.9375em) {
+  .not-phone {
+    display: none; } }
+
 .nav-hide {
   display: none; }
 
-/* 768px / 16px = 48em */
-/* Extra Small Only */
-/* Small Devices, Tablets */
+.vissible {
+  display: block; }
+
 html {
   box-sizing: border-box; }
 
@@ -399,7 +424,7 @@ html {
 
 body {
   color: #545454;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-weight: normal;
   background: #fff; }
 
@@ -561,21 +586,100 @@ footer {
     footer ul a {
       color: rgba(255, 255, 255, 0.836); }
 
+.btn {
+  display: inline-block;
+  padding: 10px 16px;
+  background-color: #f7b731;
+  color: #1b557a;
+  border-radius: 5%; }
+
+.btn:hover {
+  text-decoration: none;
+  background-color: #eca309;
+  transition: background-color 0.2s; }
+
 /*=======================
     Components
 =========================*/
-.vissible {
-  display: block; }
+#welcome-section h1 {
+  font-family: 'Dosis', sans-serif;
+  margin-bottom: 10px;
+  font-size: 400%;
+  font-weight: 300; }
+
+#welcome-section h3 {
+  font-family: 'Dosis', sans-serif; }
+
+#welcome-section a {
+  margin-right: 10px; }
+
+#welcome-section span {
+  opacity: 0.7; }
+
+#carousel-section {
+  padding: 0 0; }
 
 #carousel {
-  height: 310px;
   position: relative;
-  width: 400px;
+  width: 80%;
   box-sizing: border-box;
-  overflow: hidden; }
+  overflow: hidden;
+  margin: 0 auto;
+  border: 1px solid #e7e7e7;
+  margin-bottom: 10px; }
+  @media only screen and (max-width: 47.9375em) {
+    #carousel {
+      width: 100%;
+      height: 230px; } }
+  @media only screen and (min-width: 48em) {
+    #carousel {
+      height: 280px; } }
+  @media only screen and (min-width: 62em) {
+    #carousel {
+      height: 330px; } }
 
 figure {
   display: none;
   position: absolute;
-  left: 0;
-  top: 0; }
+  left: 33.5%;
+  top: 10px;
+  margin: 0; }
+  @media only screen and (max-width: 47.9375em) {
+    figure img {
+      width: 200px;
+      height: 200px; } }
+  @media only screen and (min-width: 48em) {
+    figure img {
+      width: 250px;
+      height: 250px; } }
+  @media only screen and (min-width: 62em) {
+    figure img {
+      width: 300px;
+      height: 300px; } }
+
+#back, #next {
+  position: absolute;
+  top: 35.7%;
+  font-size: 500%;
+  cursor: pointer; }
+
+#back {
+  left: 20px; }
+
+#next {
+  right: 20px; }
+
+.priceNname {
+  position: absolute;
+  top: 70%;
+  left: 82%; }
+  .priceNname .fig-name, .priceNname .fig-price {
+    color: #545454; }
+    @media only screen and (min-width: 48em) {
+      .priceNname .fig-name, .priceNname .fig-price {
+        font-size: 120%; } }
+    @media only screen and (min-width: 62em) {
+      .priceNname .fig-name, .priceNname .fig-price {
+        font-size: 150%; } }
+  .priceNname .fig-price {
+    color: #eb2f06; }
