--- a/public/app/styles/scss/base/reset.scss
+++ b/public/app/styles/scss/base/reset.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   color: $text_color;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-weight: normal;
   background: #fff;
 }
