--- a/public/app/styles/scss/style.scss
+++ b/public/app/styles/scss/style.scss
@@ -5,9 +5,9 @@
 
 @import "base/variables";
 @import "base/normalize";
-@import "base/utilities";
 @import "base/mixins";
 @import "base/media-queries";
+@import "base/utilities";
 @import "base/reset";
 
 /*=======================
@@ -16,6 +16,7 @@
 
 @import "modules/nav";
 @import "modules/footer";
+@import "modules/buttons";
 
 /*=======================
     Components
