--- a/public/app/views/directiveViews/carousel.html
+++ b/public/app/views/directiveViews/carousel.html
@@ -1,31 +1,45 @@
-<span><input type="checkbox" name="toggle-carousel" id="toggle-carousel">Toggle slide show</span>
 
-<div id="carousel">
-    <figure class="vissible">
-        <a href="#"  ng-click="redirect(home.products[0]['name'])">
-            <!-- <img src="{{home.products[0]['imageLink']}}" width="300px" height="300px"> -->
-            <p>{{home.products[0]['imageLink']}}</p>
-        </a>
-    </figure>
-    <figure>
-        <a href="#"  ng-click="redirect(home.products[1]['name'])">
-            <!-- <img src="{{home.products[1]['imageLink']}}" width="300px" height="300px"> -->
-            <p>{{home.products[1]['imageLink']}}</p>
-        </a>
-    </figure>
-    <figure>
-        <a href="#"  ng-click="redirect(home.products[2]['name'])">
-            <!-- <img src="{{home.products[2]['imageLink']}}" width="300px" height="300px"> -->
-            <p>{{home.products[2]['imageLink']}}</p>
-        </a>
-    </figure>
-    <figure>
-        <a href="#"  ng-click="redirect(home.products[3]['name'])">
-            <!-- <img src="{{home.products[3]['imageLink']}}" width="300px" height="300px"> -->
-            <p>{{home.products[3]['imageLink']}}</p>
-        </a>
-    </figure>
-</div>
-
-<i class="fas fa-angle-left" id="back"></i>
-<i class="fas fa-angle-right" id="next"></i>
+<section id="carousel-section">
+    <div class="container">
+        <div id="carousel">
+            <figure class="vissible">
+                <a href="#"  ng-click="redirect(home.products[0]['name'])">
+                    <img src="{{home.products[0]['imagelink']}}">
+                    <div class="priceNname not-phone">
+                        <span class="fig-price">&#8358;{{(home.products[0]['price'] * 350).toFixed(2)}}</span><br>
+                        <span class="fig-name">{{home.products[0]['name']}}</span>
+                    </div>
+                </a>
+            </figure>
+            <figure>
+                <a href="#"  ng-click="redirect(home.products[1]['name'])">
+                    <img src="{{home.products[1]['imagelink']}}">
+                    <div class="priceNname not-phone">
+                        <span class="fig-price">&#8358;{{(home.products[1]['price'] * 350).toFixed(2)}}</span><br>
+                        <span class="fig-name">{{home.products[1]['name']}}</span>
+                    </div>
+                </a>
+            </figure>
+            <figure>
+                <a href="#"  ng-click="redirect(home.products[2]['name'])">
+                    <img src="{{home.products[2]['imagelink']}}">
+                    <div class="priceNname not-phone">
+                        <span class="fig-price">&#8358;{{(home.products[2]['price'] * 350).toFixed(2)}}</span><br>
+                        <span class="fig-name">{{home.products[2]['name']}}</span>
+                    </div>
+                </a>
+            </figure>
+            <figure>
+                <a href="#"  ng-click="redirect(home.products[3]['name'])">
+                    <img src="{{home.products[3]['imagelink']}}">
+                    <div class="priceNname not-phone">
+                        <span class="fig-price">&#8358;{{(home.products[3]['price'] * 350).toFixed(2)}}</span><br>
+                        <span class="fig-name">{{home.products[3]['name']}}</span>
+                    </div>
+                </a>
+            </figure>
+            <i class="fas fa-angle-left" id="back"></i>
+            <i class="fas fa-angle-right" id="next"></i>
+        </div>
+    </div>
+</section>
