--- a/public/app/views/shop.html
+++ b/public/app/views/shop.html
@@ -28,6 +28,6 @@
         </a>
         <a href="#" ng-click="shop.redirect(product['name'])">{{product['name']}}</a>
         <p>&#8358;{{(product['price']).toFixed(2)}}</p>
-        <button ng-click="shop.addToCart(product)">Add</button>
+        <a href="#" class="btn" ng-click="shop.addToCart(product)">Add</a>
     </div>
 </div>
