--- a/public/app/styles/scss/components/home.scss
+++ b/public/app/styles/scss/components/home.scss
@@ -7,6 +7,9 @@
         margin-bottom: 10px;
         font-size: 400%;
         font-weight: 300;
+        @include extra-small-only {
+            font-size: 300%;
+        }
     }
 
     h3 {
@@ -50,6 +53,9 @@ figure {
     left: 33.5%;
     top: 10px;
     margin: 0;
+    @include extra-small-only {
+        left: 25%;
+    }
     img {
         @include extra-small-only {
             width: 200px;
@@ -71,6 +77,9 @@ figure {
     top: 35.7%;
     font-size: 500%;
     cursor: pointer;
+    @include extra-small-only {
+        font-size: 300%;
+    }
 }
 
 #back {
