--- a/public/app/styles/scss/style.scss
+++ b/public/app/styles/scss/style.scss
@@ -17,9 +17,12 @@
 @import "modules/nav";
 @import "modules/footer";
 @import "modules/buttons";
+@import "modules/layouts";
+@import "modules/scrollToTop";
 
 /*=======================
     Components
 =========================*/
 
 @import "components/home";
+@import "components/shop";
