--- a/public/app/styles/scss/base/variables.scss
+++ b/public/app/styles/scss/base/variables.scss
@@ -3,7 +3,8 @@ $main-orange: #f7b731;
 $text-color: #545454;
 $link-color: #1a0dab;
 $link-visited-color: #609;
-$cart-red: #eb2f06;
+$cart-red: #bc0000;
+$real-cart-red: #DF1F00;
 $footer-gray: #495057;
 $footer-border: #e6e6e6;
 $mobile-nav-border: #e7e7e7;
