--- a/public/app/styles/scss/modules/nav.scss
+++ b/public/app/styles/scss/modules/nav.scss
@@ -91,7 +91,7 @@
             width: 17px;
             height: 17px;
             line-height: 18px;
-            background-color: $cart-red;
+            background-color: $real-cart-red;
             border-radius: 50%;
             text-align: center;
         }
