--- a/public/app/styles/scss/modules/scrollToTop.scss
+++ b/public/app/styles/scss/modules/scrollToTop.scss
@@ -1,6 +1,6 @@
 #scrollToTop {
     position: fixed;
-    top: 90.5%;
+    bottom: 30px;
     right: 30px;
     display: none;
     padding: 5px 13px;
